<resources>
    <string name="app_name">PS</string>
    <string name="title">Song Title</string>
    <string name="etTitle">Enter song title here</string>
    <string name="singer">Singers</string>
    <string name="etSinger">Enter singers name here</string>
    <string name="year">Year</string>
    <string name="etYear">Enter year of release here</string>
    <string name="stars">Stars</string>
    <string name="btnInsert">Insert</string>
    <string name="btnShowList">Show List</string>
    <string name="btnBack">Back</string>
    <string name="sortby5stars">Show songs with 5 stars</string>
    <string name="sortbyTitle">Sort by title</string>
    <string name="sortbySinger">Sort by singer</string>
    <string name="song_id">Song ID</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="btnCancel">Cancel</string>


</resources>